--- a/dist.ini
+++ b/dist.ini
@@ -1,18 +1,8 @@
 name	= WWW-Embedly
-version	= 0.01
-author	= Jason Wieland <jwieland@cpan.org>
-license	= Perl_5
-copyright_holder = Jason Wieland
 
-[GatherDir]
-[MetaYAML]
-[MakeMaker]
-[Manifest]
-[PruneCruft]
-[License]
-[Readme]
-[ExtraTests]
-[Test::Perl::Critic]
-[PodCoverageTests]
-[PodSyntaxTests]
-[AutoPrereqs]
+[GitHub::Meta]
+[GitHub::Update]
+[Git::NextVersion]
+repo = embedly-perl
+cpan = 1
+[@ROKR::Basic]
