hopefully done with dzil

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,9 @@
 name	= WWW-Embedly
-
+main_module	= lib/WWW/Embedly.pm
 [GitHub::Meta]
+repo	= embedly-perl
 [GitHub::Update]
+repo	= embedly-perl
+cpan	= 1
 [Git::NextVersion]
-repo = embedly-perl
-cpan = 1
 [@ROKR::Basic]
