Moved from WWW to WebService namespace..  seemed to fit a bit better

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
-name	= WWW-Embedly
-main_module	= lib/WWW/Embedly.pm
+name	= WebService-Embedly
+main_module	= lib/WebService/Embedly.pm
 [GitHub::Meta]
 repo	= embedly-perl
 [GitHub::Update]
