another prereq for openbsd

--- a/dist.ini
+++ b/dist.ini
@@ -7,11 +7,14 @@ repo	= embedly-perl
 cpan	= 1
 [Git::NextVersion]
 first_version	= 0.02
+[ChangelogFromGit]
+tag_regexp  = ^v\d+\.\d+$
 [ReadmeAnyFromPod / ReadmePodInRoot]
 type = pod
 filename = README.pod
 location = root
 [@ROKR::Basic]
+
 
 [Prereqs]
 Any::Moose	= 0
@@ -21,6 +24,7 @@ HTTP::Headers	= 0
 JSON	= 0
 URI::Escape	= 0
 Ouch	= 0
+parent  = 0
 Regexp::Common	= 0
 Test::More	= 0.88 ; for done_testing
 Test::Mock::LWP::Dispatch    = 0
